@@ -21,3 +21,14 @@
 pixmapdir = $(datadir)/pixmaps
 dist_pixmap_DATA = regexxer.png
 
+stockimages = stock_save_all_24.png
+noinst_DATA = $(stockimages)
+
+pixbuf_build_list = stock_save_all_24 $(srcdir)/stock_save_all_24.png
+
+BUILT_SOURCES = stockimages.h
+CLEANFILES    = stockimages.h
+
+stockimages.h: $(stockimages)
+	$(GDK_PIXBUF_CSOURCE) --extern --raw --build-list $(pixbuf_build_list) > $@
+
